@@ -1872,6 +1872,40 @@ t/scenarios/cookie_auth_ldap_e2e/omd/test.cfg
 t/scenarios/cookie_auth_ldap_e2e/omd/test.sh
 t/scenarios/cookie_auth_ldap_e2e/thruk.conf
 t/scenarios/cookie_auth_ldap_e2e/thruk_local.conf
+t/scenarios/lmd_federation_e2e/docker-compose.yml
+t/scenarios/lmd_federation_e2e/Makefile
+t/scenarios/lmd_federation_e2e/omd/Dockerfile
+t/scenarios/lmd_federation_e2e/omd/playbook.yml
+t/scenarios/lmd_federation_e2e/omd/thruk_local.demo2
+t/scenarios/lmd_federation_e2e/t/100-lmd_federation.t
+t/scenarios/lmd_federation_e2e/thruk.conf
+t/scenarios/lmd_federation_e2e/thruk_local.conf
+t/scenarios/logfile_cache_http/backend/Dockerfile
+t/scenarios/logfile_cache_http/backend/playbook.yml
+t/scenarios/logfile_cache_http/backend/test.cfg
+t/scenarios/logfile_cache_http/docker-compose.yml
+t/scenarios/logfile_cache_http/Makefile
+t/scenarios/logfile_cache_http/omd/Dockerfile
+t/scenarios/logfile_cache_http/omd/playbook.yml
+t/scenarios/logfile_cache_http/omd/thruk_local.conf
+t/scenarios/logfile_cache_http/t/100-backend_mysql_utf8.t
+t/scenarios/logfile_cache_http/t/100-logcache.t
+t/scenarios/logfile_cache_http/t/300-controller_extinfo.t
+t/scenarios/logfile_cache_http/t/300-controller_notifications.t
+t/scenarios/logfile_cache_http/t/300-controller_showlog.t
+t/scenarios/logfile_cache_http/thruk.conf
+t/scenarios/logfile_cache_http/thruk_local.conf
+t/scenarios/Makefile
+t/scenarios/Makefile.common
+t/scenarios/report_mails_e2e/docker-compose.yml
+t/scenarios/report_mails_e2e/Makefile
+t/scenarios/report_mails_e2e/omd/1.rpt
+t/scenarios/report_mails_e2e/omd/Dockerfile
+t/scenarios/report_mails_e2e/omd/playbook.yml
+t/scenarios/report_mails_e2e/omd/test.cfg
+t/scenarios/report_mails_e2e/omd/test.sh
+t/scenarios/report_mails_e2e/thruk.conf
+t/scenarios/report_mails_e2e/thruk_local.conf
 t/scenarios/sakuli_e2e/.dropbox_uploader.enc
 t/scenarios/sakuli_e2e/0001-sahi_add_color_to_highlight.js.patch
 t/scenarios/sakuli_e2e/all_in_one.tab
@@ -1988,32 +2022,6 @@ t/scenarios/sakuli_e2e/print2unittest
 t/scenarios/sakuli_e2e/sakuli/Dockerfile
 t/scenarios/sakuli_e2e/start_dashboard.sh
 t/scenarios/sakuli_e2e/test.sh
-t/scenarios/logfile_cache_http/backend/Dockerfile
-t/scenarios/logfile_cache_http/backend/playbook.yml
-t/scenarios/logfile_cache_http/backend/test.cfg
-t/scenarios/logfile_cache_http/docker-compose.yml
-t/scenarios/logfile_cache_http/Makefile
-t/scenarios/logfile_cache_http/omd/Dockerfile
-t/scenarios/logfile_cache_http/omd/playbook.yml
-t/scenarios/logfile_cache_http/omd/thruk_local.conf
-t/scenarios/logfile_cache_http/t/100-backend_mysql_utf8.t
-t/scenarios/logfile_cache_http/t/100-logcache.t
-t/scenarios/logfile_cache_http/t/300-controller_extinfo.t
-t/scenarios/logfile_cache_http/t/300-controller_notifications.t
-t/scenarios/logfile_cache_http/t/300-controller_showlog.t
-t/scenarios/logfile_cache_http/thruk.conf
-t/scenarios/logfile_cache_http/thruk_local.conf
-t/scenarios/Makefile
-t/scenarios/Makefile.common
-t/scenarios/report_mails_e2e/docker-compose.yml
-t/scenarios/report_mails_e2e/Makefile
-t/scenarios/report_mails_e2e/omd/1.rpt
-t/scenarios/report_mails_e2e/omd/Dockerfile
-t/scenarios/report_mails_e2e/omd/playbook.yml
-t/scenarios/report_mails_e2e/omd/test.cfg
-t/scenarios/report_mails_e2e/omd/test.sh
-t/scenarios/report_mails_e2e/thruk.conf
-t/scenarios/report_mails_e2e/thruk_local.conf
 t/test_request
 t/TestUtils.pm
 t/timed_test.sh
