@@ -1,0 +1,21 @@
+<Component Thruk::Backend>
+    <peer>
+        name    = demo
+        id      = demoid
+        type    = livestatus
+        <options>
+            peer = localhost:60557
+        </options>
+    </peer>
+    <peer>
+        name    = lmd
+        id      = lmdid
+        type    = livestatus
+        <options>
+            peer = 127.0.0.1:61000
+        </options>
+    </peer>
+</Component>
+
+use_lmd_core=1
+lmd_core_bin=lmd
